--- a/model_clustering.ipynb
+++ b/model_clustering.ipynb
@@ -241,42 +241,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import mlflow\n",
-    "import mlflow.sklearn\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.cluster import KMeans\n",
-    "from mlflow.models import infer_signature\n",
-    "\n",
-    "# Entraîner un modèle K-Means\n",
-    "X_sample = X[:5]  # Prendre quelques échantillons pour l'input_example\n",
-    "kmeans = KMeans(n_clusters=3, random_state=42).fit(X)\n",
-    "\n",
-    "# Définir un input_example (5 premières lignes)\n",
-    "input_example = pd.DataFrame(X_sample)\n",
-    "\n",
-    "# Déterminer la signature automatiquement\n",
-    "signature = infer_signature(X_sample, kmeans.predict(X_sample))\n",
-    "\n",
-    "# Enregistrer le modèle avec signature et input_example\n",
-    "mlflow.sklearn.log_model(\n",
-    "    sk_model=kmeans,\n",
-    "    artifact_path=\"KMeans_Model\",\n",
-    "    input_example=input_example,\n",
-    "    signature=signature\n",
-    ")\n",
-    "\n",
-    "print(\"Modèle enregistré avec signature et input_example \")\n",
-    "\n",
-    "#A IMPLEMENTER AU DESSUS"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -343,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +339,7 @@
     "    plt.scatter(X_2d[df[\"cluster\"] == cluster, 0], X_2d[df[\"cluster\"] == cluster, 1], label=f\"Cluster {cluster}\")\n",
     "\n",
     "plt.legend()\n",
-    "plt.title(\"Clusters K-Means sur les données textuelles\")\n",
+    "plt.title(\"Clusters K-Means sur les données textuelles avec TSNE\")\n",
     "plt.show()\n"
    ]
   },
