FIX terminé Tout est bon

--- a/model_clustering_v2.ipynb
+++ b/model_clustering_v2.ipynb
@@ -713,6 +713,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers import SentenceTransformer\n",
+    "\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
+    "model.save('models/all-MiniLM-L6-v2')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
